# yclean

./: .gitignore  README.md  checkExtremeChannels.py  def_domask_lines.py  hacerMascara.py  hacer_mascara.py  pyproject.toml  second_max_local.py  utils.py  yclean.py  yclean_parallel.py
docs/: index.html  search.js  yclean.html
docs/yclean/: hacer_mascara.html  run_tclean_parallel.html  run_yclean.html  utils.html  yclean_parallel.html
yclean/: hacer_mascara.py  join_cubes.py  run_yclean.py  utils.py  yclean_parallel.py
