[tool.poetry]
name = "yclean"
version = "v2.3.1"
description = "Auto-masking molecular line cube CLEANing"
authors = [
    "Yanett Contreras",
    "Patricio Sanhueza",
    "Fernando Olguin <f.olguin.ch@gmail.com>"
]
maintainers = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"
#homepage = ""
#documentation = ""

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
astropy = "^6.0.0"
casatasks = "6.6.3.22"
casatools = "6.6.3.22"
spectral-cube = "^0.6.5"
dask = "2024.2.1"
#numpy = "1.26.4"
scipy = "^1.10.1"
psutil = { version = "^5.9.4", optional = true }
#goco_helpers = { path = "../goco-helpers/" }
goco_helpers = { git = "https://github.com/folguinch/goco-helpers.git" }
casadata = "2023.9.18"

[tool.poetry.extras]
sysinfo = ["psutil"]

[tool.poetry.scripts]
run_yclean = 'yclean.run_yclean:run_yclean'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
